--- a/drones/mini.css
+++ b/drones/mini.css
@@ -1,8 +1,19 @@
-* {
+/* RGB */
+$aindigo: rgba(84, 13, 110, 1);
+$apink: rgba(238, 66, 102, 1);
+$asunglow: rgba(255, 210, 63, 1);
+$ahoneydew: rgba(243, 252, 240, 1);
+$adarkgreen: rgba(31, 39, 27, 1);
+
+html {
     text-align: center;
     margin: 0 auto;
-    background-color: ;
-    color: ;
+    background-color: rgba(255, 210, 63, 1); 
+    color: rgba(31, 39, 27, 1);
+}
+
+body {
+    
 }
 
 .navbar ul {
@@ -10,10 +21,13 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: rgba(35, 39, 42, 1);
+    background-color: rgba(255, 210, 63, 1);
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 25%;
+    height: 100%;
+    position: fixed;
+    overflow: auto;
 } 
 
 .navbar li {
@@ -24,7 +38,11 @@
 
 .navbar li a {
     display: block;
-    padding: 14px 16px;
-    background-color: rgba(35, 39, 42, 1);
+    width: 60px;
+    padding: 8px 16px;
     text-decoration: none;
+} 
+
+.navbar li a:hover {
+    background-color: rgba(238, 66, 102, 1);
 } 
