--- a/drones/mini.css
+++ b/drones/mini.css
@@ -6,14 +6,21 @@ $ahoneydew: rgba(243, 252, 240, 1);
 $adarkgreen: rgba(31, 39, 27, 1);
 
 html {
-    text-align: center;
-    margin: 0 auto;
-    background-color: rgba(255, 210, 63, 1); 
-    color: rgba(31, 39, 27, 1);
+
 }
 
-body {
-    
+body { 
+    font-family: 'Roboto';
+    font-size: 22px;
+    background-color: rgba(243, 252, 240, 1);
+    margin: 0;
+    padding: 0;
+}
+
+.all {
+    text-align: center;
+    color: rgba(31, 39, 27, 1);
+    padding-left: 20%;
 }
 
 .navbar ul {
@@ -24,7 +31,7 @@ body {
     background-color: rgba(255, 210, 63, 1);
     position: fixed;
     top: 0;
-    width: 25%;
+    width: 20%;
     height: 100%;
     position: fixed;
     overflow: auto;
@@ -33,14 +40,16 @@ body {
 .navbar li {
     display: inline;
     float: left;
-    
+    width: 100%;
+    text-align: left;
 } 
 
 .navbar li a {
     display: block;
-    width: 60px;
-    padding: 8px 16px;
+    width: auto;
+    padding: 10px 20px;
     text-decoration: none;
+    color: rgba(31, 39, 27, 1)
 } 
 
 .navbar li a:hover {
