--- a/drones/mini.css
+++ b/drones/mini.css
@@ -50,17 +50,30 @@ h1 {
     background-color: rgba(238, 66, 102, 0.5);
 }
 
-.navbar ul{
+.navbar ul {
     list-style-type: none;
-    margin: 0;
     padding: 0;
-    background-color: rgba(255, 210, 63, 1);
-    position: fixed;
-    top: 0;
+    margin: 0;
     width: 20%;
-    height: 100%;
     overflow: auto;
+    position: fixed;
+    background-color: rgba(255, 210, 63, 1);
 } 
+
+.navbartop ul { 
+    top: 0;
+    height: 90%;
+    margin-bottom: 90%;
+    /* background-color: rgba(255, 210, 63, 1); */
+}
+
+.navbarbottom ul {
+    position: fixed;
+    top: 90%;
+    height: 10%;
+}
+
+
 
 .navbar li {
     display: inline;
@@ -83,4 +96,8 @@ h1 {
 
 .navbar_breaks li {
     text-align: center;
+}
+
+.navbar_bottom {
+    vertical-align: bottom;
 }
