--- a/drones/style.css
+++ b/drones/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800');
+
 /* RGB */
 $aindigo: rgba(84, 13, 110, 1);
 $apink: rgba(238, 66, 102, 1);
@@ -94,3 +96,17 @@ h1 {
 .navbar li a:hover {
     background-color: rgba(238, 66, 102, 1);
 } 
+
+
+
+
+
+
+.cereal {
+    font-family: Open Sans;
+    font-size: 40px;
+    line-height 100px;
+    text-align: center;
+    
+    
+}
