--- a/style.css
+++ b/style.css
@@ -3,20 +3,38 @@
     margin: 0 auto;
     background-color: rgba(44, 47, 51, 1);
     color: rgba(255, 255, 255, 1);
-    font-family: "unisans";
+    font-family: 'Roboto';
+    font-size: 50px
+}
+
+html, body {
+    height: 100%;
 }
 
 body {
-    
+    position: relative;
 }
 
 .links {
-    width: 100%
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 
+.link {
+    float: left;
+    width: 33.33%;
+    width: calc(100% / 3);
+    height: 100%;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 200px;
+    text-decoration: none;
+}
 
-
-
+a:hover {
+    background-color: rgba(35, 39, 42, 1);
+}
 
 
 .image {
@@ -27,6 +45,7 @@ body {
     width: 85%;
 }
 
+/*
 .navbar ul {
     list-style-type: none;
     margin: 0;
@@ -53,4 +72,4 @@ body {
 
 .navbar li a:hover {
     background-color: #111;
-} 
+} */
