--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     background-color: rgba(44, 47, 51, 1);
     color: rgba(255, 255, 255, 1);
     font-family: 'Roboto';
-    font-size: 50px
+    font-size: 50px;
 }
 
 html, body {
@@ -13,12 +13,47 @@ html, body {
 
 body {
     position: relative;
+    box-sizing: border-box;
+    padding: 70px 0 0px 0;
 }
+
+.header {
+    height: 70px;
+    background-color: rgba(35, 39, 42, 1);
+    position: absolute;
+    width: 100%;
+    top: 0;
+    font-size: 30px;
+    line-height: 70px;
+}
+
+.homelink {
+    position: absolute;
+    height: 70px;
+    width: 70px;
+    background-color: rgba(35, 39, 42, 1);
+    top: 0;
+    left: 0;
+}
+
+.homelink a {
+    background-color: rgba(35, 39, 42, 1);
+}
+
+.homelink a:hover {
+    background-color: rgba(44, 47, 51, 1);
+}
+
+.home {
+    width: 90%;
+    height: 90%;
+}
+
 
 .links {
     width: 100%;
     height: 100%;
-    box-sizing: border-box;
+    position: relative
 }
 
 .link {
