--- a/techniques/style.css
+++ b/techniques/style.css
@@ -1,7 +1,17 @@
+/* RGB */
+$blue: rgba(199, 234, 228, 1);
+$green: rgba(167, 232, 189, 1);
+$melon: rgba(252, 188, 184, 1);
+$mauvelous: rgba(239, 167, 167, 1);
+$orangeyellow: rgba(255, 217, 114, 1);
+
+* {
+    background-color: rgba(199, 234, 228, 1);
+}
+
 body { 
     font-family: 'Roboto';
     font-size: 2vw;
-    background-color: white;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -27,17 +37,18 @@ body {
 }
 
 .htmlbox {
-    width: 98%;
-    border: 5px solid red;
-    height: 80px;
-    text-align: center;
+    width: 90%;
+    border: 5px solid rgba(167, 232, 189, 1);
+    height: auto;
+    min-height: 50px;
+    text-align: left;
+    padding: 25px;
     margin-bottom: 5px;
 }
 
 .header {
     height: 70px;
     font-size: 3vw;
-    background-color: aliceblue;
     text-align: center;
 }
 
@@ -48,7 +59,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: RGBA(0, 0, 0, 0.1);
+    background-color: rgba(252, 188, 184, 1);
 }
 
 li {
@@ -64,6 +75,5 @@ li a {
 }
 
 li a:hover {
-    background-color: RGBA(0, 0, 0, 0.2);
-    color: white;
+    background-color: rgba(239, 167, 167, 1);
 }
