--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
     background-color: rgba(35, 39, 42, 1);
 }
 
-.homelink a:hover {
+.homelink a:hover, .sketchfab-embed-wrapper:hover {
     background-color: rgba(44, 47, 51, 1);
 }
 
