--- a/assessment/style.css
+++ b/assessment/style.css
@@ -24,12 +24,14 @@ ul {
     padding: 0;
     overflow: hidden;
     background-color: rgba(114, 114, 126, 1);
-    top: 0;
-    width: 100%;
-    height: 10%;
     font-size: 10px;
     position: -webkit-sticky;
     position: sticky;
+    top: 0;
+}
+
+.navbar {
+    
 }
 
 li {
