--- a/assessment/style.css
+++ b/assessment/style.css
@@ -16,58 +16,16 @@ html {
     text-align: center;
     font-size: 50px;
     color: white;
+    transition: 250ms;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    /*    overflow: hidden;*/
-/*    background-color: rgba(114, 114, 126, 1);*/
-    font-size: 10px;
-    width: 348px;
-    top: 0;
-    position: -webkit-sticky;
-    position: sticky;
-}
-
-.navbar {}
-
-li {}
-
-li a {
-    display: block;
-    width: 348px;
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-/*    background-color: rgba(114, 114, 126, 1);*/
-}
-
-li a:hover {
-/*    background-color: rgba(121, 122, 158, 1);*/
-}
-
-.active {
-/*    background-color: rgba(121, 122, 158, 1);*/
-}
-
-
-.sketchfab-embed-wrapper {
-    text-align: center;
+.header:hover {
+    color: aliceblue;
+    transition; 250ms;
 }
 
 
 
-
-
-
-body {
-    font-family: sans-serif;
-    background: #F1F1F1;
-    padding: 0;
-    margin: 0;
-}
 
 .nav-pane {
     transition: 250ms;
@@ -77,15 +35,62 @@ body {
     top: 0;
     height: 100vh;
     width: 348px;
-    background: #EA5548;
-    border-right: 2px solid #e94d3f;
+/*    background: #EA5548;*/
+    background: rgba(121, 122, 158, 1);
+/*    border-right: 2px solid #e94d3f;*/
+/*    border-right: 2px solid rgba(114, 114, 126, 1);*/
     display: flex;
-    flex-direction: column;
+/*    flex-direction: column;*/
     justify-content: space-around;
     box-shadow: 0px 3px 10px rgba(33, 33, 33, 0.5);
-
-    text-align: left;
+    
 }
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    /*    overflow: hidden;*/
+/*    background-color: rgba(114, 114, 126, 1);*/
+    font-size: 15px;
+    width: 348px;
+    top: 0;
+}
+
+.navbar {}
+
+li {}
+
+li a {
+    display: block;
+    width: 316px;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    background-color: none;
+    transition: 250ms
+}
+
+li a:hover {
+    background-color: rgba(152, 147, 218, 1);
+    transition: 250ms;
+}
+
+.active {
+    background-color: rgba(152, 147, 218, 1);
+}
+
+
+.sketchfab-embed-wrapper {
+    text-align: center;
+}
+
+span {
+    
+}
+
+
+
 
 @media screen and (max-width: 620px) {
     .nav-pane {
@@ -93,15 +98,37 @@ body {
         -webkit-transform: translateX(-300px);
         transform: translateX(-300px);
     }
+    li a {
+        width: 266px;
+        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
+    }
+    ul {
+        width: 298px;
+        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
+    }
 }
 
-.nav-pane h1 {
-    margin: 0;
-    text-align: center;
-    color: #F1F1F1;
-    text-transform: uppercase;
-    font-size: 1.5rem;
+/*
+@media screen and (max-width: 450px) {
+    .nav-pane {
+        width: 100%;
+        -webkit-transform: translateX(-300px);
+        transform: translateX(-300px);
+    }
+    li a {
+        width: 100%;
+        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
+    }
+    ul {
+        width: 100%;
+        -webkit-transform: translateX(0px);
+        transform: translateX(0px);
+    }
 }
+*/
 
 .nav-pane.open {
     -webkit-transform: translateX(0);
@@ -114,7 +141,6 @@ body {
     top: 25px;
     right: 25px;
     cursor: pointer;
-    color: #212121;
 }
 
 .toggle-nav.open span.m,
@@ -130,6 +156,7 @@ body {
     opacity: 0;
     transition: 250ms;
     letter-spacing: 2px;
+    color: white;
 }
 
 .toggle-nav span.e {
@@ -150,6 +177,7 @@ body {
     transition: 250ms;
 }
 
+
 .toggle-nav span.e.btn-close span.bar:nth-child(3) {
     transition: 250ms;
     -webkit-transform: rotate(-45deg);
@@ -161,15 +189,15 @@ body {
     transition: 250ms;
     position: relative;
     display: block;
-    background: #212121;
+    background: white;
     border-radius: 1px;
-    border-bottom: 1px solid #616161;
+    border-bottom: 1px solid white;
     width: 15px;
     height: 1px;
 }
 
 .toggle-nav span.e span.bar:nth-child(2) {
-    margin: 3px 0;
+    margin: 3px 1px;
 }
 
 .toggle-nav:hover span.m,
@@ -178,3 +206,13 @@ body {
     opacity: 1;
     transition: 250ms;
 }
+
+/*
+.toggle-nav:hover ~ .header {
+    padding-right: 80px;
+    transition: 250ms;
+}
+.toggle-nav.open ~ .header {
+    padding-right: 80px;
+}
+*/
