--- a/assessment/style.css
+++ b/assessment/style.css
@@ -307,12 +307,12 @@ img {
     margin-bottom: 10px;
 }
 
-a {
+.all a {
     text-decoration: none;
     color: white;
 }
 
-a:hover {
+.all a:hover {
     text-decoration: underline;
 }
 
