--- a/assessment/style.css
+++ b/assessment/style.css
@@ -33,10 +33,6 @@ html {
     text-decoration: none;
 }
 
-.header:hover {
-    color:azure
-}
-
 .nav-pane {
     transition: 350ms;
     position: fixed;
@@ -80,7 +76,7 @@ li a {
     padding: 14px 16px;
     height: 20px;
     text-decoration: none;
-    background-color: none;
+    background-color: rgba(0, 0, 0, 0);
     transition: 350ms;
 }
 
@@ -97,6 +93,8 @@ hr {
     border-width: 3px 0 0 0;
     width: 80%;
     border-radius: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 hr:before {
@@ -319,6 +317,7 @@ img, iframe {
     margin-left: auto;
     margin-right: auto;
     max-width: 95%;
+    max-height: 800px;
     border-style: solid;
     border-color: white;
     border-width: 10px;
@@ -349,6 +348,8 @@ img, iframe {
     border: 8px solid rgba(152, 147, 218, 1);
     border-radius: 5px;
     background-color: black;
+    width: 100%;
+    height: 500px;
 }
 
 
