--- a/assessment/style.css
+++ b/assessment/style.css
@@ -15,6 +15,21 @@ html {
     z-index: 100;
 }
 
+.toggle-nav-bg {
+    background-color: rgba(152, 147, 218, 1);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
+    border-style: solid;
+    border-color: rgba(121, 122, 158, 1);
+    border-width: 5px 5px 0px 0px;
+    border-radius: 0px 5px 0px 0px;
+    position: fixed;
+    bottom: 0;
+    width: 120px;
+    height: 55px;
+    z-index: 98;
+    transform: translateY(70px);
+}
+
 .header {
     background-color: rgba(121, 122, 158, 1);
     text-align: center;
@@ -144,6 +159,72 @@ hr:before {
         width: 298px;
         -webkit-transform: translateX(0px);
         transform: translateX(0px);
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .nav-pane {
+        -webkit-transform: translateY(100vh);
+        transform: translateY(100vh);
+    }
+    
+    ul, .nav-pane {
+        width: 100%;
+    }
+    
+    li a {
+        padding-left: 0px;
+        padding-right: 0px;
+        text-align: center;
+        width: 100vw;
+    }
+    
+    .toggle-nav {
+        position: fixed;
+        bottom: 15px;
+        top: inherit;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    
+    .nav-pane.open {
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        transition: 350ms;
+    }
+        
+    .nav-pane.open ~ .toggle-nav {
+        background-color: black;        
+    }
+    
+    .toggle-nav-bg {
+        transform: translateY(0);
+    }
+    
+    .toggle-nav span.m,
+    .toggle-nav span.n,
+    .toggle-nav span.u {
+        opacity: 1;
+    }
+    
+    .toggle-nav.open span.m,
+    .toggle-nav.open span.n,
+    .toggle-nav.open span.u {
+        opacity: 1;
+    }
+    
+    ul {
+        padding-top: 0px;
+    }
+    
+    .header {
+        font-size: 9vw;
+    }
+    
+    .headertxt {
+        position: fixed;
+        top: calc((55px - 9vw) / 2);
+        width: 100%;
     }
 }
 
