--- a/assessment/style.css
+++ b/assessment/style.css
@@ -332,6 +332,7 @@ hr:before {
 
 img, iframe {
     display: block;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     max-width: 95%;
@@ -344,9 +345,37 @@ img, iframe {
     margin-bottom: 10px;
 }
 
+.validationimg {
+    max-width: 50%;
+}
+
 .modelgallery img {
     max-height: 300px;
 }
+
+.imgtxt {
+    background-color: rgba(0, 0, 0, 0);
+    position: absolute;
+    left: 0;
+    right: 0;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0);
+    border-width: 10px;
+    border-radius: 5px;
+    transition: 350ms;
+    color: rgba(0, 0, 0, 0);
+    font-weight: 1000;
+    font-size: 30px;
+    text-align: center;
+    line-height: 100px;
+}
+
+.imgtxt:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, 1);
+}
+
 
 .codepen {
     max-width: 70%;
@@ -485,5 +514,7 @@ footer p {
     
     img {
         transform: translateX(0px);
+        margin-left: auto;
+        margin-right: auto;
     }
 }
